обнвоил документацию, добавил тесты
