# docs/swagger.yaml
@@ -1226,6 +1226,10 @@ paths:
           description: Провалена валидация
           schema:
             $ref: '#/definitions/courseerror.CourseError'
+        "429":
+          description: Слишком много запросов
+          schema:
+            $ref: '#/definitions/courseerror.CourseError'
         "500":
           description: Возникла внутренняя ошибка
           schema:
